--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     />
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/index.css" />
     <!-- Custom Scripts -->
-    <script src="main.js"></script>
+    <script src="./assets/js/main.js" defer></script>
   </head>
   <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="100">
     <!-- Navigation -->
